@@ -10,7 +10,7 @@ Mesh:
   m_SubMeshes:
   - serializedVersion: 2
     firstByte: 0
-    indexCount: 136
+    indexCount: 128
     topology: 2
     firstVertex: 0
     vertexCount: 50
@@ -29,7 +29,7 @@ Mesh:
   m_IsReadable: 1
   m_KeepVertices: 1
   m_KeepIndices: 1
-  m_IndexBuffer: 0100290028000600010002000700290003000400090008001b00200021001d001c001f001e001a001600140026002400250027002a002c0018002200230019000b00000005000d000e00010000000b000d00050006000f001200100001000e000f000600110013000100010000000000050005000600060000000100060005000a002600100012001300110027000c0024000a0022001800190023000c002500260014000200010026000100100026002700060028002a0011000600270011001f00040003001e0020000800090021002f002e00150017002e002900070015002b0029002e002b00310030002b002d002c002a00300031002d002b002e002f002a00280030002a003000280029002b00
+  m_IndexBuffer: 0100290028000600010002000700290003000400090008001b00200021001d001c001f001e001a001600140026002400250027002a002c0018002200230019000b00000005000d000e00010000000b000d00050006000f001200100001000e000f0006001100130000000100060005000a002600100012001300110027000c0024000a0022001800190023000c002500260014000200010026000100100026002700060028002a0011000600270011001f00040003001e0020000800090021002f002e00150017002e002900070015002b0029002e002b00310030002b002d002c002a00300031002d002b002e002f002a00280030002a003000280029002b00
   m_Skin: []
   m_VertexData:
     m_CurrentChannels: 3
