@@ -5,6 +5,8 @@ TODO:
 
 2017.8.19	K.L.	<k.l.lambda@gmail.com>
 
+	+	MeshBuilder: added inverse faces.
+
 	*	key00 indices:
 			1,2,7,6
 			3,4,9,8
